@startuml
package com.example {

class Task {
    - String title
    - String description
    - int priority
    - LocalDate deadline
    + int compareTo(Task)
}

class TaskCategory {
    - String categoryName
    + int getTotalTasks()
    + double getAveragePriority()
}

class User {
    - String username
    - String role
    + String getRole()
}

class TaskDAO {
    + List<Task> getAllTasks()
    + void addTask(Task, int userId)
}

class TaskCategoryDAO {
    + List<TaskCategory> getAllCategories()
    + void addCategory(String categoryName)
}

class Menu {
    + void handleAddTask()
    + void handleViewCategories()
}

class TaskManager {
    - Task currentTask
    + boolean addTask(String, String, int, LocalDate, String, int)
    + void removeTask(String)
    + Task getCurrentTask()
}

TaskManager "1" --> TaskDAO : interacts
TaskManager "1" --> TaskCategoryDAO : interacts
TaskManager "1" -- "1" Task : manages
TaskManager "1" --* "*" TaskCategory : accesses

TaskCategory "1" --* "*" Task : contains
Task "1" -- "1" TaskCategory : belongs to
Menu "1" --> "*" User : interacts
Menu "1" --> TaskDAO : queries
Menu "1" --> TaskCategoryDAO : queries
Menu "1" --> TaskManager : controls
TaskDAO "1" --> "*" Task : manages
TaskCategoryDAO "1" --> "*" TaskCategory : manages

User "1" .. "1" Menu : logs in
}
@enduml
